--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -57,7 +57,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull admoskalev/yamdb
+            sudo docker pull admoskalev/yamdb:latest
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
