--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -15,16 +15,12 @@ jobs:
 
     - name: Install dependencies
       run: | 
-        # обновление pip
         python -m pip install --upgrade pip 
-        # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
         python manage.py test
     - name: Test praktikum
@@ -35,19 +31,19 @@ jobs:
     needs: tests
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2 # Проверяет доступность репозитория DockerHub для workflow
+        uses: actions/checkout@v2
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 # Вызывает сборщик контейнеров docker
+        uses: docker/setup-buildx-action@v1
       - name: Login to Docker 
-        uses: docker/login-action@v1 # Запуск скрипта авторизации на DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }} 
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub 
+        uses: docker/build-push-action@v2
         with:
           push: true
-          tags: admoskalev/infra:latest
+          tags: admoskalev/yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -61,18 +57,16 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull <имя-пользователя>/<имя-репозитория>
+            sudo docker pull admoskalev/yamdb
             sudo docker-compose stop
             sudo docker-compose rm web
-            # Создаст файл для переменных окружения
-            touch .env 
-            # Наполнит файл переменными окружения из секретов GitHub
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            # touch .env
+            # echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            # echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            # echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            # echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            # echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            # echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
@@ -84,3 +78,4 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: ${{ github.workflow }} успешно выполнен!
+
